@@ -477,10 +477,14 @@ table.header_wide tr.next td.header_l { background: none; text-align: left; heig
 table.header_wide tr.next td.header_r { background: none; text-align: right; height: 20px; padding-right: 5px; border-width: 0; }
 
 /* suggest */
+div.suggest { position: absolute; border: 1px #AAA solid; border-top: 0; width: 164px; z-index: 100; display: none;
+	-webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15); -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
+	box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
+}
 table.suggest { width: 100%; margin: 0; border-spacing: 0; background-color: #FEFEFE; }
 table.suggest tr { background-color: #FEFEFE; }
-table.suggest tr.highlight { background-color: #AACCFF; }
-table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; font-size: 1.1em; cursor: default; }
+table.suggest tr.highlight { background-color: #7A9FC1; color: #FFF; }
+table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; font-size: 1.1em; cursor: pointer; }
 
 /* flash clock */
 .flashclock {
@@ -499,9 +503,6 @@ table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; f
 }
 #color_picker table tr td { margin: 0; padding: 2px; }
 #color_picker a { text-decoration: none; padding: 0; margin: 0; }
-
-/* suggest */
-div.suggest { position: absolute; border: 1px #5C7099 solid; width: 162px; z-index: 100; display: none; }
 
 /* flickerfreescreen */
 .flickerfreescreen .shadow { background-color: #000000; }
