@@ -1,10 +1,12 @@
 Changes for 2.1.9
 
 New features:
+..F....... [ZBX-7215] improved the design of the search auto suggest (Pavels)
 .....J.... [ZBXNEXT-1776] added support for java.math.BigDecimal, java.math.BigInteger and some other open types (asaveljevs)
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+..F....... [ZBX-7215] fixed search auto suggest alwasy displaying results in lower case (Pavels)
 ....I..... [ZBX-7166] added database upgrade patches to set status of template triggers to Enabled and state of template items to normal (Andris, Sasha)
 ..F....... [ZBX-7198] fixed displaying trigger popup menu relative to mouse cursor in Monitoring > Overview page (Ivo)
 ....I..... [ZBX-7218] fixed configuration failing with Oracle 12.1 instant client libraries (asaveljevs, Sasha)
